Automatically backed up by Learn

--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,7 @@
 <h1>Create a new Pet</h1>
 
+<form action="/pets" method="POST">
+  <lable>Pet Name:</lable>
+  <input type="text" id="pet_name" name="pet[name]">
+  <input type="submit" value="Create Pet">
+</form>
