--- a/app/views/owners/new.erb
+++ b/app/views/owners/new.erb
@@ -1,17 +1,27 @@
 <h1>Create a new Owner</h1>
+ <form action="/owners" method="POST">
+ <label>Name:</label>
+ <br>
+ <input type="text" name="owner[name]" id="owner_name">
+ 
+ <p>Select an existing pet or create a new one below.</p>
+ 
 
-<form action="/owners" method="POST">
-  <label>Name:</label>
 
-  <br>
+<lable><h2>Pets</h2></lable>
+<% @pets.each do |pet| %>
+<lable><%=pet.name%></lable>
+<input type="checkbox" name="owner[pet_ids][]" id="pet_<%= pet.id %>" value="<%= pet.id %>">
+<%= pet.name %>
+<% end %>
 
-  <input type="text" name="owner[name]">
-
-  <h3>Existing Pets</h3>
-  <% @pets.each do |pet| %>
-    <input type="checkbox" name="owner[pet_ids][]" id="<%= pet.id %>" value="<%= pet.id %>"><%= pet.name %><br>
-  <% end %>
-  <br>
-
-  <input type="submit" value="Create Owner">
+<br><br>
+  <h3>New Pet</h3>
+  <lable>Name:</lable>
+  <input type="text" name="pet[name]" id="pet_name">
+  <input type="submit" id="submit" value="Create Owner">
+ 
 </form>
+
+
+
