--- a/app/views/owners/show.erb
+++ b/app/views/owners/show.erb
@@ -1,7 +1,13 @@
+<h1>The owner</h1>
 <h1><%=@owner.name%></h1>
+<br><br>
 <h4>Pets:</h4>
 <ul>
   <%@owner.pets.each do |pet|%>
   <li><%=pet.name%></li>
   <%end%>
 </ul>
+
+
+
+
