--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,3 +1,26 @@
 <h1>Update Pet</h1>
 
+  <form action="/pets/<%=@pet.id%>" method="post">
+  <input type="hidden" name="_method" id="hidden" value="PATCH">
+      <label>Name:</label> <h3><%=@pet.name%></h3>
+      <br>
+      <input type="text" name="pet[name]" value="<%=@pet.name%>" id="pet_name">
+      <br>
+      <label>Choose an existing owner:</label>
+      <br>
+      <% Owner.all.each do |owner| %>
+        <input type="radio" name="pet[owner_id]" value="<%=owner.id%>" id="<%=@owner.id%>" <%='checked' if @pet.owner == owner %>><%=owner.name%></input>
+      <%end%>
+      <br>
+      <label>and/or, create a new owner:</label>
+      <br>
+      <label>Name:</label>
+      <br>
+      <input type="text" name="owner[name]" id="owner_name">
+      <br>
+      <input type="submit" value="Update Pet">
+    </form>
+
+
+
 
