--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -1,1 +1,8 @@
-show.erb
+
+<h1><%= @pet.name %></h1>
+    <h3><%= @pet.owner %></h3>
+
+    <form action="/pets/<%=@pet.id%>/edit" method="get">
+      <h2>Edit said pet?</h2>
+      <input type="submit" name="submit" value="Edit Pet">
+    </form>
