--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,17 @@
 <h1>Create a new Pet</h1>
+<form method="POST" action="/pets">
+Pet Name:<input type="text" id="pet_name" name="pet[name]">
+<h3>Existing Owners</h3>
+    <% @owners.each do |owner| %>
+      <input type="radio" name="pet[owner_id]" id="<%= owner.id %>" value="<%= owner.id %>"><%= owner.name %></input><br>
+    <% end %>
+
+    <h3>New Owner</h3>
+    <label>Owner Name: </label>
+    <br>
+    <input type="text" name="owner[name]" id="owner_name"></input>
+    <br><br>
+ 
+<input type="submit" value="Create Pet">
+</form>
 
